# softlore

./: Cargo.toml  LICENSE  README.md  config.json
src/: main.rs
src/error/: mod.rs
src/tokens/: assignment.rs  constants.rs  mod.rs  tokenizer.rs
